--- a/examples/demo_pipeline.ipynb
+++ b/examples/demo_pipeline.ipynb
@@ -5,8 +5,8 @@
    "id": "ec7c82f28b7fd29c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-10T20:11:25.606336Z",
-     "start_time": "2026-01-10T20:11:25.598031Z"
+     "end_time": "2026-01-10T20:31:48.285459Z",
+     "start_time": "2026-01-10T20:31:48.105301Z"
     }
    },
    "source": [
@@ -14,13 +14,13 @@
     "import cv2"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-10T20:11:26.379536Z",
-     "start_time": "2026-01-10T20:11:26.376231Z"
+     "end_time": "2026-01-10T20:31:49.803309Z",
+     "start_time": "2026-01-10T20:31:48.950752Z"
     }
    },
    "cell_type": "code",
@@ -31,13 +31,13 @@
    ],
    "id": "1960b2de8f6cd2bf",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-10T20:11:26.481431Z",
-     "start_time": "2026-01-10T20:11:26.476203Z"
+     "end_time": "2026-01-10T20:31:49.812827Z",
+     "start_time": "2026-01-10T20:31:49.809891Z"
     }
    },
    "cell_type": "code",
@@ -47,13 +47,13 @@
    ],
    "id": "31f5d2a0d5da670",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-10T20:11:26.810438Z",
-     "start_time": "2026-01-10T20:11:26.806132Z"
+     "end_time": "2026-01-10T20:31:50.285210Z",
+     "start_time": "2026-01-10T20:31:50.281255Z"
     }
    },
    "cell_type": "code",
@@ -68,14 +68,14 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 4
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-01-10T20:11:27.065782Z",
-     "start_time": "2026-01-10T20:11:27.048948Z"
+     "end_time": "2026-01-10T20:31:50.508298Z",
+     "start_time": "2026-01-10T20:31:50.486676Z"
     }
    },
    "cell_type": "code",
@@ -89,13 +89,13 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-10T20:11:27.516407Z",
-     "start_time": "2026-01-10T20:11:27.506151Z"
+     "end_time": "2026-01-10T20:31:51.198446Z",
+     "start_time": "2026-01-10T20:31:51.194120Z"
     }
    },
    "cell_type": "code",
@@ -105,7 +105,7 @@
    ],
    "id": "6d01506d8fd2a120",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -114,12 +114,7 @@
    "id": "c1533b7bfd74045e"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-01-10T19:47:38.647276500Z",
-     "start_time": "2026-01-10T19:47:22.791496Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from droplet_corr_lab.segmentation import SAMMaskGenerator\n",
@@ -163,7 +158,7 @@
    "cell_type": "code",
    "source": [
     "sam_obj = SAMMaskGenerator(\n",
-    "    checkpoint_path=\"\",\n",
+    "    checkpoint_path=\"\", # SPECIFY SAM MODEL CHECKPOINT PATH!!\n",
     "    model_type=\"vit_h\",\n",
     "    points_per_side=70,\n",
     "    pred_iou_thresh=0.75,\n",
